created interdependency between links and users

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
 <p>Hello <%= @user.first_name %></p>
+
+<% @user.links.each do |link| %>
+  <a href= "<%= link.url %>"><%= link.title %></a>
+<% end %>
