--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,13 @@
       <div class="container">
             <ul class="nav navbar-nav > li > a {padding-top:10px !important; padding-bottom:10px !important;} </ul>
             navbar {min-height:40px !important}">
-           <li><img src="<%= asset_path 'logo.png' %>" width="120"></li>
-            <li><marquee><blink><img src="<%= asset_path 'logo.png' %>" width="120"></blink></marquee></li>
-
-            <marquee behavior="alternate">Your bouncing text goes here</marquee>
+           <li><a href="<%= root_path %>"><img src="<%= asset_path 'logo.png' %>" width="120"></a></li>
             </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user  %>
               <li>Hello, <%= current_user.first_name %>!</li>
               <li><%= link_to "My Links", "/users/#{current_user.id}" %> </li>
-               <li><%= link_to "New Links", "/users/#{current_user.id}" %> </li>
+               <li><%= link_to "New Links", new_link_path %> </li>
               <li><%= link_to_unless_current 'Logout', logout_path %> </li>
             <% else %>
             <li><%= link_to "Login", login_path %></li>
