links on user show paged ordered by date created

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <hr>
 
 <div class="links">
-  <% @user.links.each do |link| %>
+  <% @user.links.order(created_at: :desc).each do |link| %>
     <a href= "<%= link.url %>"><%= link.title %></a> <br> <br>
   <% end %>
 </div>
