--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -4,15 +4,19 @@
   <% @links.each do |link| %>
     <div class="vote-wrap">
       <div class="thumbs-up">
-        <%= link_to '<i class="fa fa-thumbs-o-up"></i>'.html_safe, new_vote_path(vote: 'up', user_id: current_user, link_id: link) %>
+        <% if link.vote = [] %>
+          <%= link_to '<i class="fa fa-thumbs-o-up"></i>'.html_safe, new_vote_path(vote: 'up', user_id: current_user, link_id: link) %>
+        <% elsif link.vote_value(current_user) == 'up' %>
+          <%= link_to '<i class="fa fa-thumbs-up"></i>'.html_safe, vote_path(link.voted?(current_user)), method: 'delete' %>
+        <% end %>
       </div>
 
       <div class="score">
-        5
+        <%= link.votes.count %>
       </div>
 
       <div class="thumbs-down">
-        <i class="fa fa-thumbs-o-down"></i>
+
       </div>
     </div>
 
@@ -22,9 +26,3 @@
   <% end %>
 
 </div>
-
-
-
-<i class="fa fa-thumbs-up"></i>
-
-<i class="fa fa-thumbs-down"></i>
